# disasm2vec

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
models/: base_tfidf_asm.json  base_tfidf_asm.pkl  base_tfidf_asm_keepreg.json  base_tfidf_asm_keepreg.pkl
src/disasm2vec/: __init__.py
src/disasm2vec/compiler/: __init__.py  gcc.py
src/disasm2vec/disassembler/: __init__.py  errors.py  objdump.py
src/disasm2vec/pipeline/: __init__.py  config.py  runner.py
src/disasm2vec/preprocess/: __init__.py  normalizer.py  parser.py
src/disasm2vec/tokenizer/: __init__.py  cleaner.py  core.py
src/disasm2vec/vectorizer/: __init__.py  base.py  factory.py  tfidf.py
tests/: __init__.py  test_compiler.py  test_disassembler.py  test_pipeline.py  test_tokenizer.py  test_vectorizer.py
