[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disasm2vec"
version = "0.1.0"
description = "disasm2vec is a Python-based research framework for learning vector representations from disassembled C/C++ binaries."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ahmad Nur Rohim", email = "ahmadnurrohim2812@gmail.com" }
]
dependencies = [
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
]